--- a/templates/landing/home.html
+++ b/templates/landing/home.html
@@ -7,7 +7,7 @@
 			<div class="col-lg-4-offset-4">
 				<h3>
 					<p class="text-typing">Портфолио в Школу Менеджеров:</p>
-					<p class="text-typing">Пример лэндинга: <a href="{% url 'landing' %}">Landing</a></p>
+					<p class="text-typing">Пример лэндинга: <a href="{% url 'jp_ed_landing' %}">Landing</a></p>
 					<p class="text-typing">Блог №1: <a href="http://feeljapan.ru">feeljapan.ru</a></p>
 					<!-- <p class="text-typing">Блог №2:</p> -->
 				</h3>
