--- a/templates/jp_ed_landing/jp_ed_landing.html
+++ b/templates/jp_ed_landing/jp_ed_landing.html
@@ -21,7 +21,7 @@
     <div class="general-container">
         <div class="container top-container">
             <div class="row">
-                <div class="col-lg-8-offset-2">
+                <div class="col-lg-8">
                     <h1 class="title">Учитесь и путешествуйте!<br>
                     </h1>
                     
