modified Bracelet landing

--- a/templates/landing/home.html
+++ b/templates/landing/home.html
@@ -8,7 +8,8 @@
 				<h3>
 					<p class="text-typing">Портфолио в Школу Менеджеров:</p>
 					<p class="text-typing">Пример лэндинга: <a href="{% url 'jp_ed_landing' %}">Landing</a></p>
-					<p class="text-typing">Блог №1: <a href="http://feeljapan.ru">feeljapan.ru</a></p>
+					<p class="text-typing">Пример блога: <a href="http://feeljapan.ru">feeljapan.ru</a></p>
+					<p class="text-typing">Задание: <a href="{% url 'landing' %}">Bracelet</a></p>
 					<!-- <p class="text-typing">Блог №2:</p> -->
 				</h3>
 			</div>
