--- a/templates/landing/landing.html
+++ b/templates/landing/landing.html
@@ -51,24 +51,98 @@
 					<h1 class="title">Браслет "Предупреждающий"</h1>
 					<img src="/static/img/braslet.jpg" class="img-responsive">
 					<br>
-					<h5>
-						<p>
-							Браслет одевается на запястье водителя и фиксирует его пульс. <br>
-							При снижении пульса на 15% устройство выдает вибро-сигнал. <br>
-							Если пульс снижаться до 20%, звучит звуковая сигнализация. <br>
-							Если пульс снижается до 25%, браслет отправляет СМС-сообщение на номер 112 - "Водитель засыпает, коодинаты: ХХХХХ". <br>
-							Одновременно прибор дает команду бортовому компьютеру - включить аварийную сигнализацию и принудительно остановить автомобиль.
-						</p>
-					</h5>
+					<p>
+						Anti-Sleep Bracelet - это инструмент, предупреждающий засыпание за рулем. 
+					</p>				
 				</div>
 			</div>
 		</div>
+		<div class="container top-discription">
+			<div class="row">
+				<div class="col-lg-8 col-lg-offset-2">
+					<p>
+						В состав браслета входит GSM/Glonas датчик, устройство отправки СМС-сообщений, вибромоторы, динамик, пульсомер. 
+					</p>				
+				</div>
+			</div>
+		</div>
+		<div class="container top-discription">
+			<div class="row">
+				<div class="col-lg-5 col-lg-offset-2">
+									
+						<p>
+							Водитель перед поездкой одевает браслет на запястье. <br>
+						</p>
+					
+				</div>
+				<div class="col-lg-3">
+					<img src="{% static 'img/bracelet_on_hand.jpg' %}" class="img-circle img-responsive"/>
+				</div>
+			</div>
+		</div>
+		
+		<div class="container top-discription">
+			<div class="row">
+				<div class="col-lg-8 col-lg-offset-2">
+					<p>
+						Когда GSM/Glonas датчик фиксирует превышение скорости больше 20 км/ч, пульсомер начинает записывать пульс водителя. Показания пульса в начале движения записываются как контрольные.
+					</p>				
+				</div>
+			</div>
+		</div>
+
+		<div class="container top-discription">
+			<div class="row">
+				<div class="col-lg-3 col-lg-offset-2">
+					<img src="{% static 'img/bus_driver.jpg' %}" class="img-circle img-responsive"/>
+				</div>
+
+				<div class="col-lg-5">
+										
+						<p>
+							При снижении пульса на 15% устройство выдает вибро-сигнал. <br>
+							
+						</p>
+					
+				</div>
+			</div>
+		</div>
+		<div class="container top-discription">
+			<div class="row">
+				<div class="col-lg-5 col-lg-offset-2">
+										
+						<p>
+							Если пульс снижаться до 20%, звучит звуковая сигнализация. 
+						</p>
+					
+				</div>
+				<div class="col-lg-3">
+					<img src="{% static 'img/car_signal_wave.jpg' %}" class="img-responsive"/>
+				</div>
+			</div>
+		</div>
+		<div class="container top-discription">
+			<div class="row">
+				<div class="col-lg-3 col-lg-offset-2">
+					<img src="{% static 'img/car_signal_sms.jpg' %}" class="img-responsive"/>
+				</div>
+				<div class="col-lg-5 ">
+					<p>
+						Если пульс снижается до 25%, браслет отправляет СМС-сообщение на номер 112 - "Водитель засыпает, коодинаты: ХХХХХ". <br>
+					</p>
+				</div>
+			</div>
+		</div>
+		
+			
+	</div>
 			
 	</div>
 	
 	<div class="container footer">
 		<div class="row">
 			<div class="col-lg-8 col-lg-offset-2">
+				
 			</div>
 		</div>
 	</div>
