--- a/static/static_dev/css/landing.css
+++ b/static/static_dev/css/landing.css
@@ -41,11 +41,15 @@ html, body{
 }
 
 .top-discription{
-	margin-top: 50px;
+	padding: 50px 0;
 	font-weight: 500;
+	font-size: 25px;
 }
 
 .footer{
-	height: 200px;
-	font-weight: 100;
+	position: relative;
+    margin-top: -180px; /* negative value of footer height */
+    height: 180px;
+    clear: both;
+    background-color: white;
 }
