crrect some errors Bracelet landing

--- a/templates/landing/landing.html
+++ b/templates/landing/landing.html
@@ -24,7 +24,7 @@
 				<div class="col-lg-8 col-lg-offset-2">
 					<img src="/static/img/bg_image.jpg" class="img-responsive">
 					<h1 class="title">Едeте далеко за рулем?<br>
-						Закажите "Предупреждающий" браслет!<br>
+						Закажите Anti-sleep браслет!<br>
 					Оставьте е-мэйл для связи</h1>
 					<div>
 						<form action="" method="post" class="form-inline text-center">{% csrf_token %}
@@ -48,11 +48,11 @@
 		<div class="container top-discription">
 			<div class="row">
 				<div class="col-lg-8 col-lg-offset-2">
-					<h1 class="title">Браслет "Предупреждающий"</h1>
+					<h1 class="title">Браслет Anti-sleep</h1>
 					<img src="/static/img/braslet.jpg" class="img-responsive">
 					<br>
 					<p>
-						Anti-Sleep Bracelet - это инструмент, предупреждающий засыпание за рулем. 
+						Anti-Sleep браслет - это инструмент, предупреждающий засыпание за рулем. 
 					</p>				
 				</div>
 			</div>
@@ -61,7 +61,7 @@
 			<div class="row">
 				<div class="col-lg-8 col-lg-offset-2">
 					<p>
-						В состав браслета входит GSM/Glonas датчик, устройство отправки СМС-сообщений, вибромоторы, динамик, пульсомер. 
+						В состав браслета входит GSM/Glonass датчик, устройство отправки СМС-сообщений, вибромоторы, динамик, пульсомер, кнопка "ВКЛ/ВЫКЛ". 
 					</p>				
 				</div>
 			</div>
@@ -70,9 +70,10 @@
 			<div class="row">
 				<div class="col-lg-5 col-lg-offset-2">
 									
-						<p>
-							Водитель перед поездкой одевает браслет на запястье. <br>
-						</p>
+					<p>
+						Водитель перед поездкой одевает браслет на запястье. <br>
+						Включает устройство нажатием на кнопку "ВКЛ/ВЫКЛ".
+					</p>
 					
 				</div>
 				<div class="col-lg-3">
@@ -85,7 +86,7 @@
 			<div class="row">
 				<div class="col-lg-8 col-lg-offset-2">
 					<p>
-						Когда GSM/Glonas датчик фиксирует превышение скорости больше 20 км/ч, пульсомер начинает записывать пульс водителя. Показания пульса в начале движения записываются как контрольные.
+						Когда GSM/Glonass датчик фиксирует превышение скорости больше 20 км/ч, пульсомер начинает записывать пульс водителя. Показания пульса в начале движения записываются как контрольные.
 					</p>				
 				</div>
 			</div>
@@ -100,7 +101,7 @@
 				<div class="col-lg-5">
 										
 						<p>
-							При снижении пульса на 15% устройство выдает вибро-сигнал. <br>
+							При снижении пульса на 5% устройство выдает вибро-сигнал. <br>
 							
 						</p>
 					
@@ -111,9 +112,9 @@
 			<div class="row">
 				<div class="col-lg-5 col-lg-offset-2">
 										
-						<p>
-							Если пульс снижаться до 20%, звучит звуковая сигнализация. 
-						</p>
+					<p>
+						Если пульс снижается до 7%, звучит звуковая сигнализация. 
+					</p>
 					
 				</div>
 				<div class="col-lg-3">
@@ -128,12 +129,21 @@
 				</div>
 				<div class="col-lg-5 ">
 					<p>
-						Если пульс снижается до 25%, браслет отправляет СМС-сообщение на номер 112 - "Водитель засыпает, коодинаты: ХХХХХ". <br>
+						Если пульс снижается до 10%, браслет отправляет СМС-сообщение на номер 112 - "Водитель засыпает, координаты: ХХХХХ". <br>
+						Браслет отправляет стоп-сигнал на бортовому компьютер автомобиля. Кмпьютер включает аварийную сигнализацию и останавливает двигатель.
 					</p>
 				</div>
 			</div>
 		</div>
-		
+		<div class="container top-discription">
+			<div class="row">
+				<div class="col-lg-8 col-lg-offset-2">
+					<p>
+						Когда водитель доехал до пункта назначения, выключает браслет нажатием на кнопку "ВКЛ/ВЫКЛ".
+					</p>				
+				</div>
+			</div>
+		</div>
 			
 	</div>
 			
