crrect some errors Bracelet landing3

--- a/templates/landing/landing.html
+++ b/templates/landing/landing.html
@@ -130,7 +130,7 @@
 				<div class="col-lg-5 ">
 					<p>
 						Если пульс снижается до 10%, браслет отправляет СМС-сообщение на номер 112 - "Водитель засыпает, координаты: ХХХХХ". <br>
-						Браслет отправляет стоп-сигнал на бортовому компьютер автомобиля. Компьютер включает аварийную сигнализацию и останавливает двигатель.
+						Браслет отправляет стоп-сигнал на бортовой компьютер автомобиля. Компьютер включает аварийную сигнализацию и останавливает двигатель.
 					</p>
 				</div>
 			</div>
